infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeguild-service
  namespace: timeguild-prod
  labels:
    app: timeguild
    component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: timeguild
    component: server
