infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeguild-prod-ingress
  namespace: timeguild-prod
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "timeguild.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeguild-prod-service
                port:
                  number: 80
    - host: "*.timeguild.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeguild-prod-service
                port:
                  number: 80
  tls:
    - hosts:
        - "timeguild.xyz"
        - "*.timeguild.xyz"
      secretName: timeguild-prod-tls
